--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@
             <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
               <ul class="site-navigation nav navbar-nav">
                 <li>
-                  <a href="index.html">Accueil</a>
+                  <a href="index.html" title="Accueil - La chouette agence">Accueil</a>
                 </li>
-                <li></li>
                 <li>
-                  <a href="page2.html">page2 &gt;</a>
+                  <a href="page2.html" title="Formulaire de contact">Contact</a>
                 </li>
               </ul>
             </div>
@@ -95,9 +94,10 @@
               </h1>
               <div class="text-center">
                 <a
-                  href="page2.html"
+                  href="contact.html"
                   class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
                   id="cta-hero"
+				  title="Formulaire de contact"
                   >Contact</a
                 >
               </div>
@@ -368,6 +368,7 @@
               </div>
           </div>
         </div>
+		</div>
       </div>
       <!-- Footer - bloc-8 END -->
     </div>
