--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <div class="container bloc-sm">
           <nav class="navbar row">
             <div class="navbar-header">
-              <a class="navbar-brand" href="index.html"
+              <a class="navbar-brand" href="index.html" title="La Chouette agence - Entreprise de Webdesign"
                 ><img
                   src="img/la-chouette-agence.png"
                   alt="atlanta web design logo"
@@ -66,7 +66,7 @@
                 </li>
                 <li></li>
                 <li>
-                  <a href="page2.html">page2 &gt;</a>
+                  <a href="contact.html" title="Formulaire de contact">contact</a>
                 </li>
               </ul>
             </div>
