--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container bloc-sm">
           <nav class="navbar row">
             <div class="navbar-header">
-              <a class="navbar-brand" href="index.html">
+              <a class="navbar-brand" href="index.html" title="La Chouette agence - Entreprise de Webdesign">
                 <img
                   src="img/la-chouette-agence.png"
                   alt="paris web design logo agence web meilleure agence"
@@ -66,7 +66,7 @@
                   <a href="index.html" title="Accueil - La chouette agence">Accueil</a>
                 </li>
                 <li>
-                  <a href="page2.html" title="Formulaire de contact">Contact</a>
+                  <a href="contact.html" title="Formulaire de contact" title="Fomulaire de contact">Contact</a>
                 </li>
               </ul>
             </div>
@@ -127,7 +127,7 @@
               </div>
               <h3 class="mg-md text-center">Web design</h3>
               <p class="text-center">
-                Que vous ayez un site web qui a besoin d&rsquo;un
+                Que vous ayez un site web qui a besoin d'un
                 rafraîchissement ou que vous partiez de zéro, laissez-nous vous
                 réaliser un design dont vous serez fier.
               </p>
@@ -192,7 +192,7 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><a class="ltc-white bold-link" href="page2.html"
+                <br /><br /><a class="ltc-white bold-link" href="contact.html" title="Formulaire de contact"
                   >Contactez notre équipe</a
                 ><br />
               </p>
@@ -318,8 +318,9 @@
             </h2>
             <div class="col-sm-12 text-center">
               <a
-                href="page2.html"
+                href="contact.html"
                 class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
+				title="Formulaire de contact"
                 >Contact</a
               >
             </div>
