--- a/contact.html
+++ b/contact.html
@@ -39,38 +39,37 @@
       <!-- bloc-0 -->
       <div class="bloc bgc-white l-bloc" id="bloc-0">
         <div class="container bloc-sm">
-          <nav class="navbar row">
-            <div class="navbar-header">
-              <a class="navbar-brand" href="index.html" title="La Chouette agence - Entreprise de Webdesign"
-                ><img
-                  src="img/la-chouette-agence.png"
-                  alt="atlanta web design logo"
-                  height="40"
-              /></a>
-              <button
-                id="nav-toggle"
-                type="button"
-                class="ui-navbar-toggle navbar-toggle"
-                data-toggle="collapse"
-                data-target=".navbar-1"
-              >
-                <span class="sr-only">Toggle navigation</span
-                ><span class="icon-bar"></span><span class="icon-bar"></span
-                ><span class="icon-bar"></span>
-              </button>
-            </div>
-            <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-              <ul class="site-navigation nav navbar-nav">
-                <li>
-                  <a href="index.html">Accueil</a>
-                </li>
-                <li></li>
-                <li>
-                  <a href="contact.html" title="Formulaire de contact">contact</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+			<nav class="navbar row">
+				<div class="navbar-header">
+				  <a class="navbar-brand" href="index.html" title="La Chouette agence - Entreprise de Webdesign">
+					<img
+					  src="img/la-chouette-agence.png"
+					  alt="paris web design logo agence web meilleure agence"
+					  height="40"
+				  /></a>
+				  <button
+					id="nav-toggle"
+					type="button"
+					class="ui-navbar-toggle navbar-toggle"
+					data-toggle="collapse"
+					data-target=".navbar-1"
+				  >
+					<span class="sr-only">Toggle navigation</span
+					><span class="icon-bar"></span><span class="icon-bar"></span
+					><span class="icon-bar"></span>
+				  </button>
+				</div>
+				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+				  <ul class="site-navigation nav navbar-nav">
+					<li>
+					  <a href="index.html" title="Accueil - La chouette agence">Accueil</a>
+					</li>
+					<li>
+					  <a href="contact.html" title="Formulaire de contact" title="Fomulaire de contact">Contact</a>
+					</li>
+				  </ul>
+				</div>
+			  </nav>
         </div>
       </div>
       <!-- bloc-0 END -->
@@ -106,8 +105,6 @@
               <form
                 id="form_1"
                 novalidate
-                success-msg="Your message has been sent."
-                fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"
               >
                 <div class="form-group">
                   <label> Nom </label>
