--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 					  <a href="index.html" title="Accueil - La chouette agence">Accueil</a>
 					</li>
 					<li>
-					  <a href="contact.html" title="Formulaire de contact" title="Fomulaire de contact">Contact</a>
+					  <a href="contact.html" title="Formulaire de contact">Contact</a>
 					</li>
 				  </ul>
 				</div>
