--- a/index.html
+++ b/index.html
@@ -112,10 +112,7 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/title.png"
-              />
+              <p>La chouette agence est une agence de web design qui aide<br> les entreprises à devenir attractives et visibles sur internet</p>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
@@ -161,10 +158,12 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/citation.png"
-              />
+              <p>"La chouette agence est une excellente agence web ! Les web<br>
+                designers ont réussi à capturer l'essence de notre<br>
+                entreprise et à l'intégrer à notre site. Cela nous a aidé à<br>
+                doubler nos ventes en ligne à Lyon."<br>
+                <span>Maxime Guilbard. PDG de à vos fourchettes</span>
+              </p>
             </div>
           </div>
         </div>
@@ -262,12 +261,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/3.bmp"
+                data-lightbox="img/3.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/3.bmp"
+                  src="img/3.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
               /></a>
@@ -282,12 +281,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/4.bmp"
+                data-lightbox="img/4.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/4.bmp"
+                  src="img/4.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
               /></a>
