correction des contrastes

--- a/index.html
+++ b/index.html
@@ -97,9 +97,8 @@
                   href="contact.html"
                   class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
                   id="cta-hero"
-				  title="Formulaire de contact"
-                  >Contact</a
-                >
+				          title="Formulaire de contact"
+                  >Contact</a>
               </div>
             </div>
           </div>
@@ -329,7 +328,7 @@
       <!-- bloc-5-cta END -->
 
       <!-- Footer - bloc-8 -->
-      <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+      <div class="bloc bgc-atomic-footer d-bloc" id="bloc-8">
         <div class="container bloc-sm">
           <div class="row">
             <div class="col-sm-12">
