suppression des alertes d'accessibilités

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
               <ul class="site-navigation nav navbar-nav">
                 <li>
-                  <a href="index.html" title="Accueil - La chouette agence">Accueil</a>
+                  <a href="./index.html" title="Accueil - La chouette agence">Accueil</a>
                 </li>
                 <li>
-                  <a href="contact.html" title="Formulaire de contact" title="Fomulaire de contact">Contact</a>
+                  <a href="contact.html" title="Formulaire de contact">Contact</a>
                 </li>
               </ul>
             </div>
@@ -93,12 +93,12 @@
                 La chouette agence.
               </h1>
               <div class="text-center">
-                <a
+                <button
                   href="contact.html"
                   class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
                   id="cta-hero"
 				          title="Formulaire de contact"
-                  >Contact</a>
+                  >Contact</button>
               </div>
             </div>
           </div>
@@ -111,7 +111,7 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <p>La chouette agence est une agence de web design qui aide<br> les entreprises à devenir attractives et visibles sur internet</p>
+              <h2>La chouette agence est une agence de web design qui aide<br> les entreprises à devenir attractives et visibles sur internet</h2>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
@@ -157,12 +157,12 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <p>"La chouette agence est une excellente agence web ! Les web<br>
+              <h3>"La chouette agence est une excellente agence web ! Les web<br>
                 designers ont réussi à capturer l'essence de notre<br>
                 entreprise et à l'intégrer à notre site. Cela nous a aidé à<br>
                 doubler nos ventes en ligne à Lyon."<br>
                 <span>Maxime Guilbard. PDG de à vos fourchettes</span>
-              </p>
+              </h3>
             </div>
           </div>
         </div>
@@ -190,9 +190,8 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><a class="ltc-white bold-link" href="contact.html" title="Formulaire de contact"
-                  >Contactez notre équipe</a
-                ><br />
+                <br /><br />
+                <br />
               </p>
             </div>
           </div>
@@ -316,9 +315,9 @@
             </h2>
             <div class="col-sm-12 text-center">
               <a
-                href="contact.html"
+                href="./contact.html"
                 class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
-				title="Formulaire de contact"
+				        aria-label="Formulaire de contact"
                 >Contact</a
               >
             </div>
@@ -338,28 +337,28 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html" title="Lien vers twitter">
+                    <a class="social" href="https://twitter.com/" aria-label="Lien vers twitter">
                       <span class="fa fa-twitter icon-md"></span>
                     </a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html" title="Lien vers Facebook">
+                    <a class="social" href="https://www.facebook.com/" aria-label="Lien vers Facebook">
                       <span class="fa fa-facebook icon-md"></span>
                     </a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html" title="Lien vers Dribble">
+                    <a class="social" href="https://dribbble.com/" aria-label="Lien vers Dribble">
                       <span class="fa fa-dribbble icon-md"></span>
                     </a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html" title="Lien vers Instagram">
+                    <a class="social" href="https://www.instagram.com/"  aria-label="Lien vers Twitter">
                       <span class="fa fa-instagram icon-md"></span>
                     </a>
                   </div>
