--- a/index.html
+++ b/index.html
@@ -207,16 +207,13 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/title2.png"
-              />
+              <h3>Nous travaillons avec beaucoup de clients,<br>voici nos réalisations.</h3>
             </div>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
               <a
-                href="#"
+                href="./img/1.jpg"
                 data-lightbox="img/1.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Refonte d'un site web pour un journal local"
@@ -236,7 +233,7 @@
             </div>
             <div class="col-sm-6">
               <a
-                href="#"
+                href="./img/2.jpg"
                 data-lightbox="img/2.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site web pour photographes"
@@ -258,7 +255,7 @@
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
               <a
-                href="#"
+                href="./img/3.jpg"
                 data-lightbox="img/3.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
@@ -278,7 +275,7 @@
             </div>
             <div class="col-sm-6">
               <a
-                href="#"
+                href="./img/4.jpg"
                 data-lightbox="img/4.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
@@ -317,7 +314,7 @@
               <a
                 href="./contact.html"
                 class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
-				        aria-label="Formulaire de contact"
+				        aria-label="Lien vers le formulaire de contact"
                 >Contact</a
               >
             </div>
