--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="css/et-line.css" />
 
-    <script src="js/jquery-2.1.0.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js" integrity="sha512-qp27nuUylUgwBZJHsmm3W7klwuM5gke4prTvPok3X5zi50y3Mo8cgpeXegWWrdfuXyF2UdLWK/WCb5Mv7CKHcA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/blocs.js"></script>
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/formHandler.js"></script>
@@ -169,37 +169,34 @@
       <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
         <div class="container bloc-sm">
           <div class="row">
-            <div class="col-sm-12">
-              <p class="text-center white">
-                La chouette agence - Agence web basée à Lyon.<br />
-              </p>
-              <div class="row row-no-gutters social">
-                <div class="col-sm-3">
-                  <div class="text-center">
-                    <a class="social" href="index.html"
-                      ><span class="fa fa-twitter icon-md"></span
-                    ></a>
-                  </div>
+            <div class="col-sm-12"><div class="row row-no-gutters social">
+              <div class="col-sm-3">
+                <div class="text-center">
+                  <a class="social" href="https://twitter.com/" aria-label="Lien vers twitter">
+                    <span class="fa fa-twitter icon-md"></span>
+                  </a>
                 </div>
-                <div class="col-sm-3">
-                  <div class="text-center">
-                    <a class="social" href="index.html"
-                      ><span class="fa fa-facebook icon-md"></span
-                    ></a>
-                  </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="text-center">
+                  <a class="social" href="https://www.facebook.com/" aria-label="Lien vers Facebook">
+                    <span class="fa fa-facebook icon-md"></span>
+                  </a>
                 </div>
-                <div class="col-sm-3">
-                  <div class="text-center">
-                    <a class="social" href="index.html"
-                      ><span class="fa fa-dribbble icon-md"></span
-                    ></a>
-                  </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="text-center">
+                  <a class="social" href="https://dribbble.com/" aria-label="Lien vers Dribble">
+                    <span class="fa fa-dribbble icon-md"></span>
+                  </a>
                 </div>
-                <div class="col-sm-3">
-                  <div class="text-center">
-                    <a class="social" href="index.html"
-                      ><span class="fa fa-instagram icon-md"></span
-                    ></a>
+              </div>
+              <div class="col-sm-3">
+                <div class="text-center">
+                  <a class="social" href="https://www.instagram.com/"  aria-label="Lien vers Twitter">
+                    <span class="fa fa-instagram icon-md"></span>
+                  </a>
+                </div>
                   </div>
                 </div>
               </div>
