--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="css/et-line.css" />
 
-    <script src="js/jquery-2.1.0.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js" integrity="sha512-qp27nuUylUgwBZJHsmm3W7klwuM5gke4prTvPok3X5zi50y3Mo8cgpeXegWWrdfuXyF2UdLWK/WCb5Mv7CKHcA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/blocs.js"></script>
     <script src="js/jquery.touchSwipe.js" defer></script>
     <script src="js/gmaps.js"></script>
@@ -213,13 +213,13 @@
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
               <a
-                href="./img/1.jpg"
-                data-lightbox="img/1.jpg"
+                href="./img/1.webp"
+                data-lightbox="img/1.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Refonte d'un site web pour un journal local"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/1.jpg"
+                  src="img/1.webp"
                   alt="paris web design logo agence web meilleure agence et refonte site web journal"
                   class="img-responsive portfolio-thumb"
               /></a>
@@ -233,13 +233,13 @@
             </div>
             <div class="col-sm-6">
               <a
-                href="./img/2.jpg"
-                data-lightbox="img/2.jpg"
+                href="./img/2.webp"
+                data-lightbox="img/2.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site web pour photographes"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/2.jpg"
+                  src="img/2.webp"
                   class="img-responsive portfolio-thumb"
                   alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
               /></a>
@@ -255,13 +255,13 @@
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
               <a
-                href="./img/3.jpg"
-                data-lightbox="img/3.jpg"
+                href="./img/3.webp"
+                data-lightbox="img/3.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/3.jpg"
+                  src="img/3.webp"
                   class="img-responsive portfolio-thumb"
                   alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
               /></a>
@@ -275,13 +275,13 @@
             </div>
             <div class="col-sm-6">
               <a
-                href="./img/4.jpg"
-                data-lightbox="img/4.jpg"
+                href="./img/4.webp"
+                data-lightbox="img/4.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/4.jpg"
+                  src="img/4.webp"
                   class="img-responsive portfolio-thumb"
                   alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
               /></a>
