modification des liens contact en button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
-	<meta name="robots" content="follow">
+    <meta name="robots" content="follow" />
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -22,8 +22,18 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="css/et-line.css" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js" integrity="sha512-qp27nuUylUgwBZJHsmm3W7klwuM5gke4prTvPok3X5zi50y3Mo8cgpeXegWWrdfuXyF2UdLWK/WCb5Mv7CKHcA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"
+      integrity="sha512-qp27nuUylUgwBZJHsmm3W7klwuM5gke4prTvPok3X5zi50y3Mo8cgpeXegWWrdfuXyF2UdLWK/WCb5Mv7CKHcA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"
+      integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="js/blocs.js"></script>
     <script src="js/jquery.touchSwipe.js" defer></script>
     <script src="js/gmaps.js"></script>
@@ -42,7 +52,11 @@
         <div class="container bloc-sm">
           <nav class="navbar row">
             <div class="navbar-header">
-              <a class="navbar-brand" href="index.html" title="La Chouette agence - Entreprise de Webdesign">
+              <a
+                class="navbar-brand"
+                href="index.html"
+                title="La Chouette agence - Entreprise de Webdesign"
+              >
                 <img
                   src="img/la-chouette-agence.png"
                   alt="paris web design logo agence web meilleure agence"
@@ -63,10 +77,14 @@
             <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
               <ul class="site-navigation nav navbar-nav">
                 <li>
-                  <a href="./index.html" title="Accueil - La chouette agence">Accueil</a>
+                  <a href="./index.html" title="Accueil - La chouette agence"
+                    >Accueil</a
+                  >
                 </li>
                 <li>
-                  <a href="contact.html" title="Formulaire de contact">Contact</a>
+                  <a href="contact.html" title="Formulaire de contact"
+                    >Contact</a
+                  >
                 </li>
               </ul>
             </div>
@@ -94,11 +112,13 @@
               </h1>
               <div class="text-center">
                 <button
-                  href="contact.html"
+                  onclick="window.location.href='./contact.html';"
                   class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
                   id="cta-hero"
-				          title="Formulaire de contact"
-                  >Contact</button>
+                  aria-label="Lien vers le formulaire de contact"
+                >
+                  Contact
+                </button>
               </div>
             </div>
           </div>
@@ -111,7 +131,10 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <h2>La chouette agence est une agence de web design qui aide<br> les entreprises à devenir attractives et visibles sur internet</h2>
+              <h2>
+                La chouette agence est une agence de web design qui aide<br />
+                les entreprises à devenir attractives et visibles sur internet
+              </h2>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
@@ -123,9 +146,9 @@
               </div>
               <h3 class="mg-md text-center">Web design</h3>
               <p class="text-center">
-                Que vous ayez un site web qui a besoin d'un
-                rafraîchissement ou que vous partiez de zéro, laissez-nous vous
-                réaliser un design dont vous serez fier.
+                Que vous ayez un site web qui a besoin d'un rafraîchissement ou
+                que vous partiez de zéro, laissez-nous vous réaliser un design
+                dont vous serez fier.
               </p>
             </div>
             <div class="col-sm-4">
@@ -157,10 +180,11 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <h3>"La chouette agence est une excellente agence web ! Les web<br>
-                designers ont réussi à capturer l'essence de notre<br>
-                entreprise et à l'intégrer à notre site. Cela nous a aidé à<br>
-                doubler nos ventes en ligne à Lyon."<br>
+              <h3>
+                "La chouette agence est une excellente agence web ! Les web<br />
+                designers ont réussi à capturer l'essence de notre<br />
+                entreprise et à l'intégrer à notre site. Cela nous a aidé à<br />
+                doubler nos ventes en ligne à Lyon."<br />
                 <span>Maxime Guilbard. PDG de à vos fourchettes</span>
               </h3>
             </div>
@@ -207,7 +231,10 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <h3>Nous travaillons avec beaucoup de clients,<br>voici nos réalisations.</h3>
+              <h3>
+                Nous travaillons avec beaucoup de clients,<br />voici nos
+                réalisations.
+              </h3>
             </div>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
@@ -311,12 +338,13 @@
               équipe !
             </h2>
             <div class="col-sm-12 text-center">
-              <a
-                href="./contact.html"
+              <button
+                onclick="window.location.href='./contact.html';"
                 class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
-				        aria-label="Lien vers le formulaire de contact"
-                >Contact</a
+                aria-label="Lien vers le formulaire de contact"
               >
+                Contact
+              </button>
             </div>
           </div>
         </div>
@@ -334,36 +362,52 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://twitter.com/" aria-label="Lien vers twitter">
+                    <a
+                      class="social"
+                      href="https://twitter.com/"
+                      aria-label="Lien vers twitter"
+                    >
                       <span class="fa fa-twitter icon-md"></span>
                     </a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://www.facebook.com/" aria-label="Lien vers Facebook">
+                    <a
+                      class="social"
+                      href="https://www.facebook.com/"
+                      aria-label="Lien vers Facebook"
+                    >
                       <span class="fa fa-facebook icon-md"></span>
                     </a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://dribbble.com/" aria-label="Lien vers Dribble">
+                    <a
+                      class="social"
+                      href="https://dribbble.com/"
+                      aria-label="Lien vers Dribble"
+                    >
                       <span class="fa fa-dribbble icon-md"></span>
                     </a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://www.instagram.com/"  aria-label="Lien vers Twitter">
+                    <a
+                      class="social"
+                      href="https://www.instagram.com/"
+                      aria-label="Lien vers Twitter"
+                    >
                       <span class="fa fa-instagram icon-md"></span>
                     </a>
                   </div>
                 </div>
               </div>
+            </div>
           </div>
         </div>
-		</div>
       </div>
       <!-- Footer - bloc-8 END -->
     </div>
