--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="robots" content="follow" />
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="css/et-line.css" />
