--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     />
     <meta name="robots" content="follow" />
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
-
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
-    <link rel="stylesheet" type="text/css" href="css/et-line.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
+    <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"
@@ -58,7 +57,7 @@
                 title="La Chouette agence - Entreprise de Webdesign"
               >
                 <img
-                  src="img/la-chouette-agence.png"
+                  src="img/la-chouette-agence.webp"
                   alt="paris web design logo agence web meilleure agence"
                   height="40"
               /></a>
@@ -102,7 +101,7 @@
           <div class="row tight-width-whitespace">
             <div class="col-sm-12">
               <img
-                src="img/logo.png"
+                src="img/logo.webp"
                 class="center-block image-resize-mode"
                 width="100"
                 alt="La chouette agence, agence web paris, création logo paris"
