--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <meta name="robots" content="follow" />
-    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
+    <link rel="shortcut icon" type="image/webp" href="favicon.webp" />
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -43,7 +43,7 @@
 				<div class="navbar-header">
 				  <a class="navbar-brand" href="index.html" title="La Chouette agence - Entreprise de Webdesign">
 					<img
-					  src="img/la-chouette-agence.png"
+					  src="img/la-chouette-agence.webp"
 					  alt="paris web design logo agence web meilleure agence"
 					  height="40"
 				  /></a>
