modification css bootstrap

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      href="./css/bootstrap.css"
     />
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link
@@ -43,10 +43,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="js/blocs.js"></script>
-    <script src="js/jquery.touchSwipe.js" defer></script>
-    <script src="js/gmaps.js"></script>
-
     <title>La chouette agence</title>
 
     <!-- Analytics -->
