--- a/index.html
+++ b/index.html
@@ -16,19 +16,9 @@
     />
     <meta name="robots" content="follow" />
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./css/bootstrap.css"
-    />
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
-      integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
     <script
