--- a/contact.html
+++ b/contact.html
@@ -104,11 +104,11 @@
             <div class="col-sm-6">
               <form id="form_1" novalidate>
                 <div class="form-group">
-                  <label> Nom </label>
+                  <label aria-labelledby="Entrez votre Nom"> Nom </label>
                   <input id="name" class="form-control" value="Votre nom" required />
                 </div>
                 <div class="form-group">
-                  <label> Adresse email </label>
+                  <label aria-labelledby="Entrez votre adresse email"> Adresse email </label>
                   <input id="email" class="form-control" type="email" value="Votre adresse email" required />
                 </div>
                 <div class="form-group">
