--- a/contact.html
+++ b/contact.html
@@ -109,18 +109,18 @@
                 </div>
                 <div class="form-group">
                   <label> Adresse email </label>
-                  <input id="email" class="form-control" type="email" value="Votre adresse email" required />
+                  <input aria-label="Entrez votre email" id="email" class="form-control" type="email" value="Votre adresse email" required />
                 </div>
                 <div class="form-group">
                   <label> Comment nous avez-vous connu ? </label>
-                  <input class="form-control" type="email" required id="input_504" />
+                  <input aria-label="Comment nous avez-vous connu" class="form-control" type="email" required id="input_504" />
                 </div>
                 <div class="form-group">
                   <label>
                     Brief de votre projet (Ajoutez autant de détails que
                     nécessaire)<br />
                   </label>
-                  <textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+                  <textarea aria-label="Entrez votre brief de projet" id="message" class="form-control" rows="4" cols="50" required></textarea>
                 </div>
                 <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
                 Envoyer
