--- a/contact.html
+++ b/contact.html
@@ -62,10 +62,10 @@
 				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				  <ul class="site-navigation nav navbar-nav">
 					<li>
-					  <a href="index.html" title="Accueil - La chouette agence">Accueil</a>
+					  <a href="index.html" title="Accueil - La chouette agence" aria-label="Retour à la page d'accueil">Accueil</a>
 					</li>
 					<li>
-					  <a href="contact.html" title="Formulaire de contact">Contact</a>
+					  <a href="contact.html" title="Formulaire de contact" aria-label="Formulaire de contact">Contact</a>
 					</li>
 				  </ul>
 				</div>
