mofification page contact

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <div class="container bloc-sm">
 			<nav class="navbar row">
 				<div class="navbar-header">
-				  <a class="navbar-brand" href="index.html" title="La Chouette agence - Entreprise de Webdesign">
+				  <a class="navbar-brand" href="index.html" title="La Chouette agence - Entreprise de Webdesign" aria-label="La chouette agence - Entreprise de Webdesign">
 					<img
 					  src="img/la-chouette-agence.webp"
 					  alt="paris web design logo agence web meilleure agence"
@@ -62,10 +62,10 @@
 				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				  <ul class="site-navigation nav navbar-nav">
 					<li>
-					  <a href="index.html" title="Accueil - La chouette agence" aria-label="Retour à la page d'accueil">Accueil</a>
+					  <a href="./index.html" title="Accueil - La chouette agence" aria-label="Retour à la page d'accueil">Accueil</a>
 					</li>
 					<li>
-					  <a href="contact.html" title="Formulaire de contact" aria-label="Formulaire de contact">Contact</a>
+					  <a href="./contact.html" title="Formulaire de contact" aria-label="Formulaire de contact">Contact</a>
 					</li>
 				  </ul>
 				</div>
@@ -76,7 +76,7 @@
 
       <!-- bloc-6 -->
       <div
-        class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper"
+        class="bloc bg-dots-bg bg-repeat bgc-atomic-contact d-bloc bloc-bg-texture texture-paper"
         id="bloc-6"
       >
         <div class="container bloc-lg">
@@ -105,15 +105,15 @@
               <form id="form_1" novalidate>
                 <div class="form-group">
                   <label> Nom </label>
-                  <input aria-label="Entrez votre nom" id="name" class="form-control" value="Votre nom" required />
+                  <input tabindex="0" aria-label="Entrez votre nom" id="name" class="form-control" value="Entrez vos nom et prénom" required />
                 </div>
                 <div class="form-group">
                   <label> Adresse email </label>
-                  <input aria-label="Entrez votre email" id="email" class="form-control" type="email" value="Votre adresse email" required />
+                  <input aria-label="Entrez votre email" id="email" class="form-control" type="email" placeholder="Entrez votre adresse mail" required />
                 </div>
                 <div class="form-group">
                   <label> Comment nous avez-vous connu ? </label>
-                  <input aria-label="Comment nous avez-vous connu" class="form-control" type="email" required id="input_504" />
+                  <input aria-label="Comment nous avez-vous connu" class="form-control" type="text" required id="input_504" />
                 </div>
                 <div class="form-group">
                   <label>
@@ -145,7 +145,7 @@
       <!-- ScrollToTop Button END-->
 
       <!-- Footer - bloc-8 -->
-      <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+      <div class="bloc bgc-atomic-contact d-bloc" id="bloc-8">
         <div class="container bloc-sm">
           <div class="row">
             <div class="col-sm-12"><div class="row row-no-gutters social">
