--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <meta name="robots" content="follow" />
+    <meta name="google-site-verification" content="D3sw6I4NSVOiOjqW7qodP2UiBsEVgnB8vCGWB9ftOZo" />
+    <link rel="canonical" href="https://cyd21.github.io/dutoitcyrille_P4_corrige/" />
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="./style.css" />
