--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="robots" content="index,follow" />
     <meta name="google-site-verification" content="D3sw6I4NSVOiOjqW7qodP2UiBsEVgnB8vCGWB9ftOZo" />
     <link rel="canonical" href="https://cyd21.github.io/dutoitcyrille_P4_corrige/" />
-    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
