minify css and js

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <meta name="google-site-verification" content="D3sw6I4NSVOiOjqW7qodP2UiBsEVgnB8vCGWB9ftOZo" />
     <link rel="canonical" href="https://cyd21.github.io/dutoitcyrille_P4_corrige/" />
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"/>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./style.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"
