correction des messages d'erreur sur le formulaire

--- a/contact.html
+++ b/contact.html
@@ -105,22 +105,22 @@
               <form id="form_1" novalidate>
                 <div class="form-group">
                   <label> Nom </label>
-                  <input tabindex="0" aria-label="Entrez votre nom" id="name" class="form-control" value="Entrez vos nom et prénom" required />
+                  <input tabindex="0" aria-label="Entrez votre nom" aria-required="true" id="name" class="form-control" value="Entrez vos nom et prénom" required />
                 </div>
                 <div class="form-group">
                   <label> Adresse email </label>
-                  <input aria-label="Entrez votre email" id="email" class="form-control" type="email" placeholder="Entrez votre adresse mail" required />
+                  <input aria-label="Entrez votre email" aria-required="true" id="email" class="form-control" type="email" placeholder="Entrez votre adresse mail" required />
                 </div>
                 <div class="form-group">
                   <label> Comment nous avez-vous connu ? </label>
-                  <input aria-label="Comment nous avez-vous connu" class="form-control" type="text" required id="input_504" />
+                  <input aria-label="Comment nous avez-vous connu" aria-required="true" class="form-control" type="text" required id="input_504" />
                 </div>
                 <div class="form-group">
                   <label>
                     Brief de votre projet (Ajoutez autant de détails que
                     nécessaire)<br />
                   </label>
-                  <textarea aria-label="Entrez votre brief de projet" id="message" class="form-control" rows="4" cols="50" required></textarea>
+                  <textarea aria-label="Entrez votre brief de projet" aria-required="true" id="message" class="form-control" rows="4" cols="50" required></textarea>
                 </div>
                 <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
                 Envoyer
