--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="js/blocs.js"></script>
     <title>La chouette agence</title>
 
     <!-- Analytics -->
@@ -244,7 +245,7 @@
                 data-frame="snapshot-lb"
                 ><img
                   src="img/1.webp"
-                  alt="paris web design logo agence web meilleure agence et refonte site web journal"
+                  alt="Refonte d'un site web pour un journal local"
                   class="img-responsive portfolio-thumb"
               /></a>
               <h3 class="mg-md text-center">
@@ -265,7 +266,7 @@
                 ><img
                   src="img/2.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
+                  alt="Création d'un site web pour photographes"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
@@ -287,7 +288,7 @@
                 ><img
                   src="img/3.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
+                  alt="Création d'un site internet pour un voyageur"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
@@ -307,7 +308,7 @@
                 ><img
                   src="img/4.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
+                  alt="Conception d'un site pour une agence de mariage"
               /></a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
