--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="description"
-      content="La chouette agence est une agence de webdesign basée qui aide les entreprises à devenir attractives et visibles sur Internet. Nous mettons en oeuvre des compétences en UX design, en ergonomie web, en design graphique pour que le rendu graphique de vos pages web combine le respect de vos valeurs et de votre image, l’utilisabilité des interfaces, et vienne contribuer à la réussite de vos objectifs marketing."
+      content="La chouette agence est une agence de webdesign qui aide les entreprises à devenir attractives et visibles sur Internet. Nous mettons en œuvre nos compétences en UX design, en ergonomie web et design graphique pour que le rendu de vos pages web corresponde à vos valeurs et votre image."
     />
     <meta
       name="viewport"
